fix: close semantic approval lease